# crypto-tui

./: Cargo.toml
src/: config.rs  crypto.rs  jsonrpc.rs  logging.rs  main.rs
src/crypto/: product_code.rs
src/jsonrpc/: client.rs  error.rs  method.rs  request.rs  response.rs
