[package]
name = "crypto-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
crossbeam-channel = "0.5.14"
crossterm = "0.28.1"
futures-util = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["raw_value"] }
slog = "2.7.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.0", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
